# tennis-virtual-ads

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  pyproject.toml
configs/: default.yaml
docs/: PLAN.md
scripts/: debug_calibrator_image.py  download_weights.sh  format.sh  lint.sh  run_video.py  setup_ec2.sh  setup_ec2_post_reboot.sh
src/tennis_virtual_ads/: __init__.py
src/tennis_virtual_ads/io/: __init__.py  video.py
src/tennis_virtual_ads/pipeline/: __init__.py
src/tennis_virtual_ads/pipeline/calibrators/: __init__.py  base.py  dummy.py  tennis_court_detector.py
src/tennis_virtual_ads/pipeline/calibrators/_tcd_adapted/: __init__.py  court_reference.py  homography.py
src/tennis_virtual_ads/pipeline/compositor/: __init__.py  painted_blend.py
src/tennis_virtual_ads/pipeline/maskers/: __init__.py  base.py  person_masker.py
src/tennis_virtual_ads/pipeline/placer/: __init__.py  ad_placer.py  placement.py
src/tennis_virtual_ads/pipeline/temporal/: __init__.py  cut_detector.py  homography_stabilizer.py  jitter_tracker.py  keypoint_smoother.py
src/tennis_virtual_ads/utils/: __init__.py  draw.py
tests/: test_smoke.py
